# Faster_rcnn_Cplusplus_vs2013

./: CMakeLists.txt  Caffe_Net.cpp  Caffe_Net.h  README.md  config.h  register.h  testImage.txt  test_faster_rcnn.cpp
faster_3rdparty/include/glog/: logging.h
faster_3rdparty/lib/: gflags.lib  hdf5.lib  hdf5_cpp.lib  hdf5_f90cstub.lib  hdf5_fortran.lib  hdf5_hl.lib  hdf5_hl_cpp.lib  hdf5_hl_f90cstub.lib  hdf5_hl_fortran.lib  hdf5_tools.lib  libboost_chrono-vc120-mt-1_59.lib  libboost_date_time-vc120-mt-1_59.lib  libboost_date_time-vc120-mt-s-1_59.lib  libboost_filesystem-vc120-mt-1_59.lib  libboost_system-vc120-mt-1_59.lib  libboost_thread-vc120-mt-1_59.lib  libboost_thread-vc120-mt-s-1_59.lib  libglog.lib  lmdb.lib  szip.lib  zlib.lib
models/: detection_test.prototxt  proposal_test.prototxt
